--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie-cutter": "^0.2.0",
     "eslint-plugin-react-hooks": "^4.1.0",
     "next": "9.5.3",
     "react": "16.13.1",
